[package]
name = "analog_film"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"
rand = "0.8.5"
rand_distr = "0.4.3"
colored = "2.0.0"
imageproc = "0.23.0"
rusttype = "0.9.2"
chrono = "0.4.22"